; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mm/extr_cache-xsc3l2.c_xsc3_l2_flush_range.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mm/extr_cache-xsc3l2.c_xsc3_l2_flush_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CACHE_LINE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64)* @xsc3_l2_flush_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xsc3_l2_flush_range(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %3, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i64, i64* %4, align 8
  %11 = icmp eq i64 %10, -1
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = call i32 (...) @xsc3_l2_flush_all()
  br label %44

14:                                               ; preds = %9, %2
  store i64 -1, i64* %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @l2_map_save_flags(i64 %15)
  %17 = load i32, i32* @CACHE_LINE_SIZE, align 4
  %18 = sub nsw i32 %17, 1
  %19 = xor i32 %18, -1
  %20 = sext i32 %19 to i64
  %21 = load i64, i64* %3, align 8
  %22 = and i64 %21, %20
  store i64 %22, i64* %3, align 8
  br label %23

23:                                               ; preds = %27, %14
  %24 = load i64, i64* %3, align 8
  %25 = load i64, i64* %4, align 8
  %26 = icmp ult i64 %24, %25
  br i1 %26, label %27, label %40

27:                                               ; preds = %23
  %28 = load i64, i64* %3, align 8
  %29 = load i64, i64* %5, align 8
  %30 = load i64, i64* %6, align 8
  %31 = call i64 @l2_map_va(i64 %28, i64 %29, i64 %30)
  store i64 %31, i64* %5, align 8
  %32 = load i64, i64* %5, align 8
  %33 = call i32 @xsc3_l2_clean_mva(i64 %32)
  %34 = load i64, i64* %5, align 8
  %35 = call i32 @xsc3_l2_inv_mva(i64 %34)
  %36 = load i32, i32* @CACHE_LINE_SIZE, align 4
  %37 = sext i32 %36 to i64
  %38 = load i64, i64* %3, align 8
  %39 = add i64 %38, %37
  store i64 %39, i64* %3, align 8
  br label %23

40:                                               ; preds = %23
  %41 = load i64, i64* %6, align 8
  %42 = call i32 @l2_map_restore_flags(i64 %41)
  %43 = call i32 (...) @dsb()
  br label %44

44:                                               ; preds = %40, %12
  ret void
}

declare dso_local i32 @xsc3_l2_flush_all(...) #1

declare dso_local i32 @l2_map_save_flags(i64) #1

declare dso_local i64 @l2_map_va(i64, i64, i64) #1

declare dso_local i32 @xsc3_l2_clean_mva(i64) #1

declare dso_local i32 @xsc3_l2_inv_mva(i64) #1

declare dso_local i32 @l2_map_restore_flags(i64) #1

declare dso_local i32 @dsb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
